removed unused code, glymage error handling